@@ -85,7 +85,7 @@ public class ITDefaultExampleEntityService {
         finalEntitiesCount = ((Collection<DefaultExampleEntity>) service
                 .getAllEntities()).size();
 
-        Assertions.assertEquals(finalEntitiesCount, new Integer(entitiesCount + 1));
+        Assertions.assertEquals(finalEntitiesCount, Integer.valueOf(entitiesCount + 1));
     }
 
     /**
@@ -98,7 +98,7 @@ public class ITDefaultExampleEntityService {
 
         entity = service.findById(1);
 
-        Assertions.assertEquals(entity.getId(), new Integer(1));
+        Assertions.assertEquals(entity.getId(), Integer.valueOf(1));
     }
 
     /**
@@ -111,7 +111,7 @@ public class ITDefaultExampleEntityService {
 
         entity = service.findById(100);
 
-        Assertions.assertEquals(entity.getId(), new Integer(-1));
+        Assertions.assertEquals(entity.getId(), Integer.valueOf(-1));
     }
 
 }
